--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && rsync -a --ignore-existing src/views/ dist/views/",
+    "build": "tsc && rsync -a src/views/ dist/views/",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
